[package]
name = "glio"
description = "Glio is a small abstract shell above crate gl"
version = "0.0.1"
edition = "2021"
authors = ["Dmitriy Mayorov<MayorDi@yandex.ru>"]
license = "Apache-2.0"
keywords = ["OpenGL", "GL"]
categories = ["graphics"]
readme = "README.md"
homepage = "https://github.com/MayorDi/glio"
repository = "https://github.com/MayorDi/glio"

[dependencies]
gl = "0.14.0"